[package]
name = "upcount"
version = "0.1.0"
description = "Upcount invoicing app"
authors = ["Madis Väin"]
license = ""
repository = "https://github.com/madisvain/upcount"
default-run = "upcount"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
include_dir = { version = "0.7.4", features = ["glob"] }
serde_json = "1.0"
serde = { version = "1.0.203", features = ["derive"] }
tauri = { version = "1.7.1", features = [ "fs-all", "dialog-all"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"]
