[package]
name = "upcount"
version = "0.1.0"
description = "Upcount invoicing app"
authors = ["Madis Väin"]
license = ""
repository = "https://github.com/madisvain/upcount"
default-run = "upcount"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "upcount_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.203", features = ["derive"] }
tauri = { version = "2.5.1", features = ["rustls-tls"] }
tauri-plugin-updater = "2.8.1"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-fs = "2.3.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "macros", "migrate"] }
tokio = { version = "1.45.1", features = ["full"] }
nanoid = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
